update config + logs

--- a/analyse_images_detection_objets/config/config.ini
+++ b/analyse_images_detection_objets/config/config.ini
@@ -1,20 +1,20 @@
 ;INI file of object detection program
 [paths_scripts]
-IMPORT_BASE_MODEL_PATH = ../models/mobilNet_V2
-IMPORT_RETRAIN_MODEL_PATH = ../models/retrained_models/saved_models/
-PATH_TRAINING_DATA_SET = ../data/dataset_training
-PATH_FEATURE_EXTRACTOR  = ../models/feature_extractor_layer
+IMPORT_BASE_MODEL_PATH = ..\models\mobilNet_V2
+IMPORT_RETRAIN_MODEL_PATH = ..\models\retrained_models\saved_models\
+PATH_TRAINING_DATA_SET = ..\data\dataset_training
+PATH_FEATURE_EXTRACTOR  = ..\models\feature_extractor_layer
 
 [paths_detection]
-DATASET_FOLDER_PREDICTION_PATH = ./data/prediction
-PATH_FOLDER_DETECTION = ./data/prediction/detection
-PATH_DEPOT = ./data/depot
-PATH_ERROR = ./data/resultat/exceptions
-PATH_FOLDER_RESULT = ./data/resultat
-PATH_OTHERS_CLASSE = ./data/resultat/Autres
-IMPORT_BASE_MODEL_PATH = ./models/mobilNet_V2
-IMPORT_RETRAIN_MODEL_PATH = ./models/retrained_models/saved_models/
-RETRAIN_MODELS = 1581945558_armes,1581421885_argent,1581413511_drogue
+DATASET_FOLDER_PREDICTION_PATH = .\data\prediction
+PATH_FOLDER_DETECTION = .\data\prediction\detection
+PATH_DEPOT = .\data\depot
+PATH_ERROR = .\data\resultat\exceptions
+PATH_FOLDER_RESULT = .\data\resultat
+PATH_OTHERS_CLASSE = .\data\resultat\Autres
+IMPORT_BASE_MODEL_PATH = .\models\mobilNet_V2
+IMPORT_RETRAIN_MODEL_PATH = .\models\retrained_models\saved_models\
+RETRAIN_MODELS = 1583273569_armes,1581421885_argent,1581413511_drogue
 
 [analyse_parametres]
 #labels, Warning : These labels must match those of tranfser learning 
@@ -35,14 +35,14 @@ VOLUME_FILE_LIMIT = 1073741824
 IMAGE_SHAPE = 224
 
 [logs_objects_detection]
-FILENAME= ./logs/detection.log
+FILENAME= .\logs\detection.log
 FILEMODE= w
 
 [logs_transfer_learning]
-FILENAME= ../logs/transfer_learning.log
+FILENAME= ..\logs\transfer_learning.log
 FILEMODE= w
 
 [logs_graphic_interface]
-FILENAME= ./logs/detection.log
+FILENAME= .\logs\detection.log
 FILEMODE= w
 
